簡単に追記＆URI調整

--- a/beginner/00-01 環境をざっくりと揃えてみよう.md
+++ b/beginner/00-01 環境をざっくりと揃えてみよう.md
@@ -5,6 +5,7 @@
 - サーバ(実行環境)が用意できる
 - エディタ(またはIDE等)が用意できる
 - サーバにファイルをアップする事ができる
+- アップしたファイルをブラウザで確認できる
 
 ## 章本文
 
@@ -12,10 +13,29 @@
 しかしこの「実行環境を作る」のが、初心者の人にとっては割と大きなハードルになりやすいので。  
 細かい所はまた、1部2章で丁寧に説明をしますが。「とっととやりたいんだ！！」という人は、以下を選んでおくとよいでしょう。  
 
-- エディタは [Notepad++](https://notepad-plus-plus.org/downloads/) [窓の杜からダウンロード](https://forest.watch.impress.co.jp/library/software/notepadplusp/)
-- サーバは [1部2節1項 共有サーバを使った環境の準備]() で準備
-- ファイル転送ソフトは [WinSCP](https://ja.osdn.net/projects/winscp/releases/) [窓の杜からダウンロード](https://forest.watch.impress.co.jp/library/software/winscp/)
+- エディタは [Notepad++](https://notepad-plus-plus.org/downloads/) / [窓の杜からダウンロード](https://forest.watch.impress.co.jp/library/software/notepadplusp/)
+- サーバは [1部2節1項 共有サーバを使った環境の準備](https://github.com/gallu/PHPBook/blob/master/beginner/01-02-01%20%E5%85%B1%E6%9C%89%E3%82%B5%E3%83%BC%E3%83%90%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%9F%E7%92%B0%E5%A2%83%E3%81%AE%E6%BA%96%E5%82%99.md) で準備
+- ファイル転送ソフトは [WinSCP](https://ja.osdn.net/projects/winscp/releases/) / [窓の杜からダウンロード](https://forest.watch.impress.co.jp/library/software/winscp/)
 
-エディタとファイル転送ソフトは、チョイスの余地もありますが後で変更も出来るので、
+エディタとファイル転送ソフトは、チョイスの余地もありますが後で変更も出来るので、特にこだわりがなければ上述をチョイスしておくとよいと思います。  
+上述を準備すると、以下がそろうと思います。  
 
+- テキストエディタ(Notepad++)が起動できる
+- サーバにログインするための「IDとパスワード(サーバ屋によって微妙に呼称が違うので注意)」がわかっている
+- サーバの名前(ドメイン/IPアドレス)がわかっている
+- ファイル転送ソフト(WinSCP)が起動できる
+  + ファイル転送ソフトに「サーバにログインするための情報」を入れて、サーバにログインが出来る
+- ファイル転送ソフトで、「ファイルをアップすべき位置」に移動出来る
+
+------------------------
+(さくらとKAGOYAで実例)
+
+できたら、簡単に確認をしてみましょう。
+
+・ローカルに作業ディレクトリ作成
+・ローカルにファイル作成
+　・ファイルはtest.php
+　・コンテンツはテキストのみ(日本語入れておくか念のため)
+・ファイルをアップ
+・ブラウザで確認
 
