--- a/beginner/目次.md
+++ b/beginner/目次.md
@@ -1,8 +1,8 @@
 # 目次
 
-## 0部 まずは初めてみよう
+## [0部 まずは初めてみよう](https://github.com/gallu/PHPBook/blob/master/beginner/00-00%20%E3%81%BE%E3%81%9A%E3%81%AF%E5%88%9D%E3%82%81%E3%81%A6%E3%81%BF%E3%82%88%E3%81%86.md)
 
-[]()
-[]()
+- [1章 環境をざっくりと揃えてみよう](https://github.com/gallu/PHPBook/blob/master/beginner/00-01%20%E7%92%B0%E5%A2%83%E3%82%92%E3%81%96%E3%81%A3%E3%81%8F%E3%82%8A%E3%81%A8%E6%8F%83%E3%81%88%E3%81%A6%E3%81%BF%E3%82%88%E3%81%86.md)
+- []()
 
 
